src/test/ui/variance/variance-use-contravariant-struct-1.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/variance-use-contravariant-struct-1.rs:22:5
   |
LL |     v //~ ERROR mismatched types
   |     ^

error: unsatisfied lifetime constraints
  --> $DIR/variance-use-contravariant-struct-1.rs:22:5
   |
LL | fn foo<'min,'max>(v: SomeStruct<&'max ()>)
   |        ---- ---- lifetime `'max` defined here
   |        |
   |        lifetime `'min` defined here
...
LL |     v //~ ERROR mismatched types
   |     ^ return requires that `'min` must outlive `'max`

error: aborting due to previous error

